--- a/assets/css/variables/_defaults.scss
+++ b/assets/css/variables/_defaults.scss
@@ -54,6 +54,7 @@ $radius: (
   chip: 0.25rem,
   codeblock: 0.625rem,
   cover: 0.5rem,
+  image: 0.5rem,
   search-aside: 0.5rem,
   search-input: 0.25rem,
   overlay: 0.5rem,
